# Turn-Into-Gray

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
